--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ body {
 
 section{
   height: 80vh;
-  max-height: 650px;
+  min-height: 900px;
+  max-height: 1080px;
 }
 
 h1,h2,h3,h4,a,button,p{
